--- a/src/component/Clients.css
+++ b/src/component/Clients.css
@@ -11,6 +11,6 @@
 .client-content{
     display: flex;
     justify-content: space-between;
-    padding: 0px 8rem;
-    margin-top: -10rem;
+    padding: 4rem 8rem;
+    
 }
