--- a/src/component/Clients.css
+++ b/src/component/Clients.css
@@ -7,7 +7,13 @@
     margin: 0px;
     padding: 0px;
 }
+.clients-title{
+    text-align: center;
+    justify-content: center;
+    font-size: 2.5rem;
+    color: #00FCA7;
 
+}
 .client-content{
     display: flex;
     justify-content: space-between;
