--- a/src/component/Nav.css
+++ b/src/component/Nav.css
@@ -16,6 +16,7 @@ nav {
   display: flex;
   align-items: center;
   padding: 20px 30px;
+  margin: 0px;
 }
 
 .brand {
@@ -44,7 +45,7 @@ nav {
 }
 
 .SU {
-  color: #ff3998;
+  color: #00FCA7;
   text-decoration: none;
   font-size: 18px;
 }
